1.修改CI文件允许协议

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,7 @@ notifications:
   email: false
 
 script:
+  - yes | $ANDROID_HOME/tools/bin/sdkmanager "platforms;android-29"
+  - yes | $ANDROID_HOME/tools/bin/sdkmanager "build-tools;29.0.2"
   - chmod +x gradlew
   - ./gradlew assemble check
